--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
     /* position: sticky;
     top: 0px; */
     position: fixed;
-    top: 100px; right: 50px;
+    top: 100px; right: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,41 +26,135 @@
     background-color: var(--caption-color);
 }
 .top{
-    padding-bottom:8px ;
+    padding-bottom:10px ;
 }
 .bottom{
-    padding-top:8px ;
+    padding-top:15px ;
 }
 /* 상단 */
 #header{
-    width: 100%;height: 118px;
+    width: 100%;height: 150px;
     display: flex;
+    position: relative;
+}
+#header::after{
+    content: '';
+    width: 100%;
+    height: 100vh;
+    background:#ffffff ;
+    position: absolute;
+    left: 0;
+    top: 130px;
+    z-index: 1;
+    transform: all 400ms;
+    opacity:0 ;
+}
+#header.on::after{
+    content: '';
+    width: 100%;
+    height: 100vh;
+    background:#0b0002 ;
+    position: absolute;
+    left: 0;
+    top: 130px;
+    z-index: 1;
+    transform: all 400ms;
+    opacity:0.5 ;
 }
 #header-in{
-    width: 1580px; margin: 0 auto;
+    width: 1380px; margin: 0 auto;
     display: flex;
+    align-items: center;
     border-bottom: 1px solid #171717;
+    position: relative;
 }
 
 .logo{margin-top: 20px;}
+/* 네비게이션 */
 .nav{
-    padding-top:50.5px ;
-    margin-left:438.77px;
+    z-index: 1000;
+    padding-top:40px ;
+    margin-left:300px;
     width: 505px;
+    position: relative;
 }
 .nav>ul{
     display: flex;
     justify-content: space-between;
 }
-.nav>ul>li{}
-.nav>ul>li>a{
+.nav>ul>li{
+   
+    display: inline-block;
+}
+.nav>ul>li>a:hover{
+    text-decoration: underline;
+}
+.nav>ul>li>a:not(:hover){
+    color: #979797;
+}
+
+.m-nav{
     font-size: 20px;
     font-weight: 700;
     letter-spacing: -0.4px;
 }
+.submenu-nav-area{
+    position: absolute;
+    top: 90px;left: -650px;
+    width: 1380px;height: 100px;
+    background-color: rgba(224, 224, 224, 0.86);
+   visibility: hidden;
+   transition: all 3ms;
+}
+
+.submenu-nav-area-in{
+    display: flex;
+}
+
+.sub-nav-ttl{
+    margin-right: 1em;
+    padding: 23px 0 0 10px;
+    box-sizing: border-box;
+    height: 100px;
+    font-size: 25px;
+    font-weight: 700;
+   
+}
+.slacy-sub-nav{
+    width: 2px;height: 100px;
+    background-color: #171717;
+}
+.sub-nav-list{
+    margin-left: 2em;
+    padding: 8px 0 0 15px;
+    box-sizing: border-box;
+    width: 800px;
+    border-left:2px solid #171717 ;
+    
+    display: flex;
+    flex-direction: column;
+}
+.s-nav{
+    display: flex;
+}
+.s-nav>li{}
+.s-nav>li>a{
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px;
+}
+.s-nav-b{
+    padding: 15px 0 0 20px;
+    display: flex;
+}
+.s-nav-b>li>a{
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px;
+}
 .info-mn{
-    padding-top: 22px;
-    width: 204px;
+    padding-top: 29px;
+    width: 210px;
     margin-left: 81px;
 }
 .info-mn>ul{
@@ -87,7 +181,8 @@
     color: #979797;
 }
 .mmca_member{
-    /* display: block; */
+    border: 0;
+    margin-left: 8px;
     width:86px;height: 86px;
     background: var(--main-bg-color);
     border-radius: 50%;
@@ -101,8 +196,18 @@
 }
 #slider-in{
     margin: 0 auto;
-    width: 1580px;height: 625px;
+    width: 1380px;height: auto;
     /* background-color: aquamarine; */
+}
+.slideimg-1{
+    width: 100%;
+    height: auto;
+    max-width: 1380px;
+}
+@media(max-width: 1000px){
+    .slideimg-1{
+        max-width: 700px;
+    }
 }
 .slide01>h3{
     padding-top:60px ;
@@ -121,12 +226,12 @@
     margin-top: 114px;
 }
 #resume-go-to{
-  height: 164px;
+  height: px;
  
 }
 #resume-go-to-in{
     margin: 0 auto;
-    width: 1580px;
+    width: 1380px;
     display: flex;
     justify-content: space-between;
     border-bottom:1px solid var(--main-bg-color) ;
@@ -134,14 +239,14 @@
 
 .resume-txt{}
 .resume-txt>h3{
-    padding-top:33px ;
+    padding-top:23px ;
     font-size: 28px;
     font-weight: 700;
     letter-spacing: -0.28px;
     color: var(--font-color);
 }
 .resume-txt>ul{
-    padding-top:18px ;
+    padding-top:5px ;
     padding-bottom: 5px;
 }
 .resume-txt>ul>li{
@@ -153,7 +258,7 @@
 }
 
 .resume-btn{
-    padding-top: 21px;
+    padding-top: 11px;
 }
 .resume-btn>ul{}
 .resume-btn>ul>li{
@@ -234,7 +339,7 @@
 }
 #museum-intro-in{
     margin: 0 auto;
-    width: 1580px;
+    width: 1380px;
 }
 
 .contents-ttl{}
@@ -359,7 +464,7 @@
 }
 #exhibi-in{
     padding-top:67px;
-    width: 1580px;margin:  0 auto;
+    width: 1380px;margin:  0 auto;
 }
 .exhibi-top{
     display: flex;
