--- a/css/main_1200.css
+++ b/css/main_1200.css
@@ -63,7 +63,7 @@
     display: none;
 }
 #header-in{
-    width: 1380px; margin: 0 auto;
+    width: 100vw; 
     display: flex;
     align-items: center;
     border-bottom: 1px solid #171717;
@@ -74,9 +74,9 @@
 /* 네비게이션 */
 .nav{
     z-index: 1000;
-    padding-top:40px ;
-    margin-left:300px;
-    width: 505px;
+    padding-top:30px ;
+    margin-left:10vw;
+    width: 305px;
     position: relative;
 }
 .nav>ul{
@@ -87,6 +87,10 @@
    
     display: inline-block;
 }
+.nav>ul>li>a{
+    font-size: 1rem;
+}
+
 .nav>ul>li>a:hover{
     text-decoration: underline;
 }
@@ -103,7 +107,7 @@
     position: absolute;
     top: 90px;left: -650px;
     width: 1380px;height: 100px;
-    background-color: rgba(224, 224, 224, 0.86);
+    background-color: rgba(0, 0, 0, 0.86);
    visibility: hidden;
    transition: all 3ms;
 }
@@ -183,8 +187,8 @@
 }
 .mmca_member{
     border: 0;
-    margin-left: 8px;
-    width:86px;height: 86px;
+    margin-left: 2%;
+    width:63px;height: 63px;
     background: var(--main-bg-color);
     border-radius: 50%;
     color: #fff;
@@ -196,30 +200,30 @@
 /* position: relative; */
 }
 #slider-in{
-    margin: 0 auto;
-    width: 1380px;height: 500px;
+    
+    width: 100vw;height: 500px;
     /* background-color: aquamarine; */
 }
 #slider{
-   width: 1380px;
+   width: 100vw;
    overflow: hidden;
 }
 #slider>ul{
     
     display: flex;
-    width: 100%;
+    width: 100vw;
     z-index: -10;
 }
 .img-box{
     margin-top: 10px;
     overflow: hidden;
-    max-width: 1380px;
+    max-width: 115%;
     height: 359px;
     border-radius: 10px;
    
 }
 .slideimg{
-   width: 1400;
+   max-width:100vw;
    object-fit: fill;
 
 }
@@ -228,9 +232,12 @@
         max-width: 700px;
     }
 } */
+.slide{
+   width: 100vw;
+}
 .slide>h3{
     padding-top:34px ;
-    font-size: 48px;
+    font-size:3vw;
     font-weight: 700;
     letter-spacing: -2px;
     color: var(--font-color);
@@ -245,8 +252,8 @@
 #resume-go-to{
 }
 #resume-go-to-in{
-    margin: 0 auto;
-    width: 1380px;
+    
+    width: 100vw;
     display: flex;
     justify-content: space-between;
     border-bottom:1px solid var(--main-bg-color) ;
@@ -348,13 +355,13 @@
 }
 #museum-intro{
     height: 1125px;
-    padding-top: 186px;
+    padding-top: 86px;
     margin-bottom: 180px;
     box-sizing: border-box;
 }
 #museum-intro-in{
-    margin: 0 auto;
-    width: 1380px;
+
+    width: 1200px;
 }
 
 .contents-ttl{}
@@ -429,27 +436,29 @@
     float: left;
 }
 .intro-txt{
-    width: 552px;
+    width: 500px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-bottom:1px solid var(--main-bg-color) ;    
 }
 .intro-txt>h3{
-    font-size: 34px;
+    font-size:2em;
     font-weight: 700;
     color: var(--font-color);
 }
 .intro-txt>p{
-    font-size:18px;
+    font-size:16px;
     font-weight: 500;
     color: var(--font-color);
 }
 .intro-img{
-    margin-left:3.5vw ;
+    margin-left:0vw ;
+    max-width:50vw;
+    object-fit: cover;
 }
 .museum-contents{
-    width:261px ;
+    width:80% ;
 }
 .museum-contents>li{
     padding-top: 10px;
@@ -468,7 +477,7 @@
 
 .using-time{
     padding-top: 68px;
-    width: 552px;
+    width: 500px;
     border-bottom:1px solid var(--main-bg-color) ;
 }
 .using-time>h3{
@@ -492,7 +501,7 @@
 }
 #exhibi-in{
     padding-top:67px;
-    width: 1380px;margin:  0 auto;
+    width: 1200px;margin:  0 auto;
 }
 .exhibi-top{
     display: flex;
@@ -584,8 +593,7 @@ text-decoration: underline;
 #collection{}
 #collection-in{
     padding-top: 150px;
-    width: 1380px;
-    margin:  0 auto;
+    width: 1200px;
     display: flex;
     justify-content: space-between;
 }
@@ -635,7 +643,7 @@ text-decoration: underline;
 /* 디지털미술관*/
 #digitol-museum{padding-top: 130px;}
 #digitol-museum-in{
-    width: 1380px;
+    width: 1200px;
     height: 538px;
     margin: 0 auto;
     border-top: 1px solid var(--main-bg-color);
@@ -711,7 +719,7 @@ text-decoration: underline;
 /* 새소식 */
 #news{}
 #news-in{
-    width: 1380px;margin: 0 auto;
+    width: 1200px;margin: 0 auto;
 }
 .news-top{
     padding-top: 34px;
@@ -746,7 +754,7 @@ text-decoration: underline;
 .news-content{
     margin: 0 auto;
     padding-top: 51px;
-    width:1290px ;
+    width:1200px ;
 }
 .news-contents-t{
     border-top:1px solid var(--main-bg-color);
@@ -807,8 +815,7 @@ text-decoration: underline;
     background:var(--font-color);
 }
 #footer-in{
-    margin:  0 auto;
-    width: 1380px;
+    width: 1200px;
 }
 .footer-top{
     padding-top:60px;
